--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+
+    //firebase job dispatcher
+    implementation 'com.firebase:firebase-jobdispatcher:0.8.6'
 }
